
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.force";
option java_outer_classname = "Force";
option objc_class_prefix = "HLW";

package force;

service Force {
    rpc ApplyForce(ForceRequest) returns (ForceResponse) {}
}

message Position {
    float n = 1;
    float e = 2;
    float d = 3;
}

message Orientation {
    float phi = 1;
    float theta = 2;
    float psi = 3;
}

message Velocity {
    float u = 1;
    float v = 2;
    float w = 3;
}

message AngularVelocity {
    float p = 1;
    float q = 2;
    float r = 3;
}

message Acceleration {
    float u_dot = 1;
    float v_dot = 2;
    float w_dot = 3;
}

message AngularAcceleration {
    float p_dot = 1;
    float q_dot = 2;
    float r_dot = 3;
}

message GeneralizedForce {
    float x = 1;
    float y = 2;
    float z = 3;
    float k = 4;
    float m = 5;
    float n = 6;
}

message ForceRequest {
    string vesselId = 1;
    GeneralizedForce generalizedForce = 2;
}

message ForceResponse {
    Position position = 1;
    Orientation orientation = 2;
    Velocity velocity = 3;
    AngularVelocity angularVelocity = 4;
    Acceleration acceleration = 5;
    AngularAcceleration angularAcceleration = 6;
}